--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,31 +10,34 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-<RadioGroup
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
+
 
     <RadioButton
         android:id="@+id/rajeshdai"
+        android:text="rajeshdai"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
 
     <RadioButton
         android:id="@+id/dayahang"
+        android:text="dayahang"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
     <RadioButton
         android:id="@+id/saugat"
+        android:text="saugat"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-
-
-
-
-</RadioGroup>
 
         </LinearLayout>
 
